--- a/index.html
+++ b/index.html
@@ -24,17 +24,15 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
             <div class="nav__logo">
-                <a href="#home">Home</a>
-                <a href="#overview">Overview</a>
-                <a href="#author">Author</a>
-                <a href="#price">Price</a>
-                <a href="#testimonials">Testimonials</a>
-                <a href="#contact">Contact</a>
+                <a href="#index.">Home</a>
+                <a href="2index.html">Overview</a>
+                <a href="3index.html">Author</a>
+                <a href="4index.html">Contact</a>
             </div>
         </nav>
 </header>
 
-<section class="section">
+<section class="section" id="home">
     <div class="container">
         <div class="page__content">
             <div class="page__item">
@@ -52,132 +50,6 @@
     </div>
 </section>
 
-<div class="blog" id="overview">
-    <div class="container">
-        <div class="title">
-            <h2>Book Overview</h2>
-            <p> Lorem utem sapiente nisi minus iure ut facilis? Iure voluptatem labore recusandae dignissimos illo quo, aperiam deleniti!</p>
-
-        </div>
-        <div class="blog__content">
-            <div class="blog__item">
-                <div class="img">
-                    <img src="/img/f.jpg" alt="">
-                </div>
-                <div class="blog__title">
-                    <h2>Air pots</h2>
-                    <b>apple</b>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti laudantium,</p>
-                </div>
-            </div>
-            <div class="blog__item">
-                <div class="img">
-                    <img src="img/sh.jpg" alt="">
-                </div>
-                <div class="blog__title">
-                    <h2>airpots</h2>
-                    <b>apple</b>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet consectet </p>
-                    
-</div>
-            </div>
-            <div class="blog__item">
-                <div class="img">
-                    <img src="/img/h.jpg" alt="">
-                </div>
-                <div class="blog__title">
-                    <h2>airpots</h2>
-                    <b>apple</b>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet consectetur adipisicing elit.,</p>
-                </div>
-            </div>
-            <div class="blog__item">
-                <div class="img">
-                    <img src="/img/h.jpg" alt="">
-                </div>
-                <div class="blog__title">
-                    <h2>airpots</h2>
-                    <b>apple</b>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                </div>
-            </div>
-            <div class="blog__item">
-                <div class="img">
-                    <img src="/img/h.jpg" alt="">
-                </div>
-                <div class="blog__title">
-                    <h2>alisher</h2>
-                    <b>alisher</b>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                </div>
-            </div>
-            <div class="blog__item">
-                <div class="img">
-                    <img src="/img/h.jpg" alt="">
-                </div>
-                <div class="blog__title">
-                    <h2>alisher</h2>
-                    <b>alisher</b>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet </p>
-                </div>
-            </div>
-            <div class="blog__item">
-                <div class="img">
-                    <img src="/img/h.jpg" alt="">
-                </div>
-                <div class="blog__title">
-                    <h2>alisher</h2>
-                    <b>alisher</b>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet </p>
-                </div>
-            </div>
-            <div class="blog__item">
-                <div class="img">
-                    <img src="/img/h.jpg" alt="">
-                </div>
-                <div class="blog__title">
-                    <h2>alisher</h2>
-                    <b>alisher</b>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-    <div class="review" id="author">
-        <div class="container">
-            <div class="review__content">
-                <div class="title">
-                    <h2>Check Out Our Video Review</h2><hr class="hr">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever</p>
-                </div>
-                <div class="review__video">
-                    <video src="/img/it].mp4" controls></video>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="doe">
-        <div class="container">
-            <div class="title">
-                <h2>About The Author</h2>
-            </div>
-            <div class="doe__contant">
-                <div class="doe__item">
-                        <img src="/img/author.jpg" alt="">
-                </div>
-                <div class="doe__item">
-                    <h2>John Doe</h2><hr>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi esse beatae enim aperiam tempora vel, modi quae illo dolore Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo molestiae neque dicta! labore fugiat. Iure quos nostrum eius aspernatur soluta fuga, nam modi!</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis sint eligendi, error eius itaque adipisci, nulla esse q Lorem ipsum dolor sit amet consectetur adipisicing elit. Non ducimus repellendus voluptate? uam modi minus iste tempora hic delectus. Aspernatur maxime obcaecati nisi vero harum.</p>
-                    <div class="img">
-                        <img src="/img/author-signature.png" alt="" id="img">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="plan">
         <div class="container">
             <div class="title">
@@ -223,20 +95,7 @@
     </div>
 
     <!-- contact star  -->
-    <div class="contact">
-        <div class="container">
-            <div class="title">
-                <h2>Drop Us Messege</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat corrupti cumque eveniet fugiat reiciendis error.</p>
-            </div>
-            <div class="contact__item">
-                <input type="text" placeholder="Name"><br><br><br>
-                <input type="email" placeholder="Enter Email"><br><br><br>
-                <textarea></textarea><br><br><br>
-                <input type="submit">
-            </div>
-        </div>
-    </div>
+   
     
 
     <footer class="footer">
